PN-17862: fix F24 file retrieval to use correct index and simplify logging for cache conflict retries.